syntax = "proto3";

package sqrt;

message SqrtRequest {
	int32 number = 1;
}

message SqrtReponse {
	double square_root = 1;
}

service SqrtService {
	rpc sqrt (SqrtRequest) returns (SqrtReponse) {}
}